# ateam

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ateam/: BaseTool.py  __init__.py  agent.py  base_agent.py  base_tool.py
ateam/chat/: agent.py
tests/: conftest.py  test_agent.py  test_base_tool.py  test_chat_agent.py  test_example_usecase.py  test_shared_state.py
